<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/report_container_margin_bottom"  >

        <LinearLayout
            android:id="@+id/reboot_container"
            android:layout_width="@dimen/set_time_container_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/report_container_margin_top"
            android:layout_centerHorizontal="true" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/report_title_text_size"
                android:text="@string/reboot_title" />

            <TextView
                android:id="@+id/reboot_report"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="@dimen/report_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sleep_container"
            android:layout_width="@dimen/set_time_container_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/report_container_margin_top" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/report_title_text_size"
                android:text="@string/sleep_title" />

            <TextView
                android:id="@+id/sleep_report"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="@dimen/report_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vibrate_container"
            android:layout_width="@dimen/set_time_container_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/report_container_margin_top" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/report_title_text_size"
                android:text="@string/vibrate_title" />

            <TextView
                android:id="@+id/vibrate_report"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="@dimen/report_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/receiver_container"
            android:layout_width="@dimen/set_time_container_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/report_container_margin_top" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/report_title_text_size"
                android:text="@string/receiver_title" />

            <TextView
                android:id="@+id/receiver_report"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="@dimen/report_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/front_taking_picture_container"
            android:layout_width="@dimen/set_time_container_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/report_container_margin_top" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/report_title_text_size"
                android:text="@string/front_taking_picture_title" />

            <TextView
                android:id="@+id/front_taking_picture_report"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="@dimen/report_text_size" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/back_taking_picture_container"
            android:layout_width="@dimen/set_time_container_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/report_container_margin_top" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/report_title_text_size"
                android:text="@string/back_taking_picture_title" />

            <TextView
                android:id="@+id/back_taking_picture_report"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="@dimen/report_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/play_video_container"
            android:layout_width="@dimen/set_time_container_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/report_container_margin_top" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/report_title_text_size"
                android:text="@string/play_video_title" />

            <TextView
                android:id="@+id/play_video_report"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="@dimen/report_text_size" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/camera_motor_container"
            android:layout_width="@dimen/set_time_container_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/report_container_margin_top"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/report_title_text_size"
                android:text="@string/camera_motor_title" />

            <TextView
                android:id="@+id/camera_motor_report"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="@dimen/report_text_size" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/flash_light_container"
            android:layout_width="@dimen/set_time_container_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/report_container_margin_top"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/report_title_text_size"
                android:text="@string/flashlight_title" />

            <TextView
                android:id="@+id/flash_light_report"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="@dimen/report_text_size" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/loudspeaker_container"
            android:layout_width="@dimen/set_time_container_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/report_container_margin_top"
             >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/report_title_text_size"
                android:text="@string/loudspeaker_title" />

            <TextView
                android:id="@+id/loud_speaker_report"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="@dimen/report_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/screen_container"
            android:layout_width="@dimen/set_time_container_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/report_container_margin_top" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/report_title_text_size"
                android:text="@string/screen_title" />

            <TextView
                android:id="@+id/screen_report"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="@dimen/report_text_size" />
        </LinearLayout>

         <LinearLayout
            android:id="@+id/reset_container"
            android:layout_width="@dimen/set_time_container_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/report_container_margin_top"
             >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/report_title_text_size"
                android:text="@string/reset_title" />

            <TextView
                android:id="@+id/reset_report"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="@dimen/report_text_size" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
		 >
        <Button 
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/button_padding_top"
            android:paddingBottom="@dimen/button_padding_bottom"
            android:text="@string/ok"/>
        
     <!--    <Button 
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="@dimen/button_padding_top"
            android:paddingBottom="@dimen/button_padding_bottom"
            android:layout_marginLeft="@dimen/button_margin_left"
            android:text="@string/cancel"/> -->
    </LinearLayout>

</LinearLayout>

