<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/total_time_container"
                android:layout_width="@dimen/set_time_container_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/report_container_margin_top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_time_title"
                    android:textSize="@dimen/time_text_size" />

                <EditText
                    android:id="@+id/total_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@integer/default_total_test_time"
                    android:inputType="numberSigned"
                    android:singleLine="true"
                    android:textSize="@dimen/time_text_size" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:text="@string/min"
                    android:textSize="@dimen/time_text_size" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <Button
                android:id="@+id/ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="@dimen/button_padding_top"
                android:paddingBottom="@dimen/button_padding_bottom"
                android:text="@string/ok" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/button_margin_left"
                android:layout_weight="1"
                android:paddingTop="@dimen/button_padding_top"
                android:paddingBottom="@dimen/button_padding_bottom"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
